test/static/wrong/duplicate2.kk.out
test/static/wrong/duplicate2.kk(6, 1): error: Type static/wrong/duplicate2/dup is already defined