test/static/wrong/duplicate2.kk
// duplicate data type
type dup {
  Dup(:int)
}

type dup {
   Dup2(:int)
}
